--- a/content/posts/2020-03-08-get-a-job-1.md
+++ b/content/posts/2020-03-08-get-a-job-1.md
@@ -29,7 +29,7 @@ This blog is for someone like me, someone who went to a no-name school and never
 
 The resume is what lands you those interviews. So, let's talk about what you can improve in your resume to make it **more visible and attractive** to recruiters.
 
-## Table of Contents
+## Table Of Contents
 1. Example of how your resume travels around a big N
 2. Beating the Applicant tracking system(ATS)
 3. Getting past the 6-second recruiter screen.
@@ -53,7 +53,7 @@ On average, a Salesforce software engineering position gets about **~3000 applic
 There is a lot of **randomness** in the process. The recruiter might be busy or just about to go on lunch and might throw away your resume. The ATS might incorrectly read some experience that you thought will come up etc.
 
 We just want to do our best to minimize the randomness. 
-## Without further ado, here are the following tips to make your resume stand out: 
+## Tips To Make Your Resume Stand Out 
 
 ## 1. ATS Scanner
 This here is the big one. Most (if not all) tech companies in the valley use an ATS scanner in-order to parse applicants' resumes.
@@ -64,7 +64,7 @@ Long story short, An Applicant Tracking System or ATS for short - is a software 
 So whether we like it or not, the ATS is here to stay.
 
 
-### I. Basics of how ATS works
+### I. Basics Of How ATS Works
 The ATS parses a resume's content into categories and then scans those categories for specific keywords that have been predetermined and then rank the resume. If there was **x%** match then the resume is passed on to the recruiter.
 
 So this only means that the ATS is designed to weed out the **least-qualified** applicants as opposed to identifying which candidates are the best.
@@ -88,7 +88,7 @@ A great website for this is [jobscan.io](https://www.jobscan.co/) which has an A
 
 Be sure to tinker with the application and optimize your resume as needed by the job you are applying for.
 
-## 2. Getting your resume past the recruiter
+## 2. Getting Your Resume Past The Recruiter
 
 The recruiter is the human version of ATS who also scans your resume for keywords and hands the resumes which passes the screen over to the hiring manager.
 
@@ -103,7 +103,7 @@ For Example, if your job posting says:
 
 > We use the MERN stack and AWS.
 
-Make sure that you have the keyword "MERN stack" in your resume as well as MongoDB, React.js, Node and Express.js. The recruiters are not technical people. They are like a **pattern matching algorithm** who makes a binary 0 or 1 decision based on what skills they see.
+Make sure that you have the keyword "MERN stack" in your resume as well as MongoDB, React.js, Node and Express.js. The recruiters are not technical people. They are like a **pattern matching algorithm** who make a binary 0 or 1 decision based on what skills they see.
 
 Recruiters are also known for discarding resumes for things that you and I think are irrelevant to whether or not you are qualified to do your job. Unfortunately, it happens and here are some things to avoid.
 
@@ -114,7 +114,7 @@ Recruiters are also known for discarding resumes for things that you and I think
 Conclusions:
 Make sure that you have the right skills listed in your resume, have a professional email id, no pictures, etc.
 
-## 3. Getting your resume approved by the hiring manager
+## 3. Getting Your Resume Approved By The Hiring Manager
 
 Now this is the most important part. You've made it this far and this decision breaks or makes the interview.
 
@@ -125,7 +125,7 @@ The engineering managers are looking for the following skills
 In the valley, technical experience is, fortunately(unfortunately) found everywhere. Every other coder has worked someplace, knows X stack, etc. How do you differentiate yourself? Be excellent at soft-skills.
 Technical skills are important don't get me wrong. But it's the soft skills that help you stand out from the crowd.
 
-## An Unethical Social Experiment that you should (shouldn't) try.
+## A Socially Unacceptable Experiment
 
 Here is what I did for **X company. (Not my current).** I created 2 email addresses one of which was my primary email to apply for jobs and another which was a throwaway for this experiment.
 
@@ -153,7 +153,7 @@ You made it! A quick recap of what we did:
 
 There's still much more reading to do:
 
-- How to impress recruiters [Undercover Recruiter](https://theundercoverrecruiter.com/resume-dos-donts/), [Keras](https://keras.io/), and [PyTorch](https://pytorch.org/).
+- How to impress recruiters [Undercover Recruiter](https://theundercoverrecruiter.com/resume-dos-donts/)
 - [5 Skills Hiring Managers Look for in Engineers](https://www.engineering.com/JobArticles/ArticleID/13894/5-Skills-Hiring-Managers-Look-for-in-Engineering-Grads.aspx).
 - [9 Things you need to know about ATS](https://www.jobscan.co/blog/8-things-you-need-to-know-about-applicant-tracking-systems/).
 - Resume parsing [Jobscan.co](https://jobscan.co/).
