--- a/content/posts/2020-03-09-get-a-job-2.md
+++ b/content/posts/2020-03-09-get-a-job-2.md
@@ -45,19 +45,19 @@ Next we will move onto what methods we can use to apply to jobs.
 
 (NOTE 2: THESE ARE STATISTICS OVER 8 MONTHS: FROM JULY TO FEBRUARY CORRESPONDING TO THE TIME AFTER I GRADUATED TILL THE TIME I GOT EMPLOYED)
 
-> **JOBS APPLIED** -> 270
-
-> **ACCEPTED FOR INTERVIEW** -> 51
-
-> **NUMBER OF INTERVIEWS FROM ONLINE APPLICATIONS** -> 8
-
-> **NUMBER OF INTERVIEWS FROM COLD EMAILS** -> 16
-
-> **NUMBER OF INTERVIEWS FROM EMPLOYEE REFERRALS** -> 4
-
-> **NUMBER OF INTERVIEWS FROM WALKING INTO COMPANIES** -> 21
-
-> **NUMBER OF INTERVIEWS FROM CAREER FAIRS** -> 2
+> JOBS APPLIED -> 270
+>
+> ACCEPTED FOR INTERVIEW -> 51
+>
+> NUMBER OF INTERVIEWS FROM ONLINE APPLICATIONS -> 8
+>
+> NUMBER OF INTERVIEWS FROM COLD EMAILS -> 16
+>
+> NUMBER OF INTERVIEWS FROM EMPLOYEE REFERRALS -> 4
+>
+> NUMBER OF INTERVIEWS FROM WALKING INTO COMPANIES -> 21
+>
+> NUMBER OF INTERVIEWS FROM CAREER FAIRS -> 2
 
 As you can see, an incredible percentage **(~72%)** of my interviews were from cold-emails or from walking into companies. Only a disappointing **15%** interviews were from online applications.
 
@@ -309,7 +309,7 @@ So here's how you do it. Grab your resume, make a cover letter for the engineeri
 
 Go as far as you can in the company; drop off at the entrance desk; give it straight to the engineer if accessible; whatever you need to do to get it to the right hands.
 
-**SECONDARY APPROACH**: Post-it. Every Engineer has a mailbox at their company and will have mail delivered to them. Worst case, they open it says a few words and trash it. Best case - They **LOVE** the way you approach things and decide to give you an interview. 
+**SECONDARY APPROACH**: Mail it. Every Engineer has a mailbox at their company and will have mail delivered to them. Worst case, they open it says a few words and trash it. Best case - They **LOVE** the way you approach things and decide to give you an interview. 
 
 P.S: I got an Uber onsite this way; no-frills, no hackerrank just straight Onsite.
 
