adding third blog

--- a/content/posts/2020-03-10-get-a-job-3.md
+++ b/content/posts/2020-03-10-get-a-job-3.md
@@ -18,7 +18,7 @@ prev: "/blog/get-a-job-2/"
 next: "/blog/get-a-job-4/"
 ---
 
-![](./media-link/sf.jpg)
+![](./media-link/interview.jpeg)
 
 # Introduction and Background
 
@@ -52,19 +52,114 @@ The first assumption is that you know how to code. You know a language that you 
 
 This article covers a general tech-interview blueprint: Behavioral interviews and technical interviews. It **does not** cover specific area questions like web development, embedded systems etc.
 
-## Time to prepare
+## Time To Prepare
 
 Assume that to cover preperation end to end you will need a full month of dedication spending 2-3 hours a day prepping. You can increase or decrease that based on your experience.
 
-## Table of contents
+## Table Of Contents
 
-1. Cracking the behavioral interview
-2. Cracking the technical interview
-3. Do's and Don'ts during the interview
-4. Pracitcing mock interviews
-5. Interviewing successfully
+* Cracking the behavioral interview
+* Cracking the technical interview
+* Pracitcing mock interviews
+
 
 **Now that you have a good understanding of what to cover, let's dive right into it.**
 
-## Cracking the technical interview
+You've spent hours crafting your resume, applying to jobs and practicing coding. Now the time is to put your skills to test. In this section, we will discuss how to crack the behavioral and coding interview and what type of questions you can expect.
 
+Later, we we will talk about what to do and what not to do during eacg type of interview followed by tools that we can use to help us succeed.
+
+## Cracking The Technical Interview
+
+The technical interview whether whiteboarding or remote boils down to the same things:
+
+* Can you solve a problem?
+* Can you solve it efficiently?
+* Can you communicate your thought process well?
+
+> Most coding interviews boil down to Hashmaps, DFS/BFS - Many Dev's
+
+### How To Approach Studying For The Coding Interview
+
+It's time to review the basics: **Data Structures and Algorithms**. 
+
+List of **The most important** Data Structures and Algorithms:
+
+* Arrays and HashMaps
+* Linked Lists
+* Graphs
+* BFS/DFS
+* Kadane's Algorithm
+* Djikstra's Algorithm
+
+The important thing here is to know the in&out of your data structure in a language that you are comfortable with. Knowing the ds really well gives you the ability to solve questions that you haven't faced before and expands your thinking.
+
+**How to solve questions**: The way I approached solving questions was by setting a time of 1 hour for each question. No matter what, after 1 hour I would stop and this was to replicate an interview setting. I would try to solve a question for 30 minutes and if I couldn't, I would look up the solution and code it up in the last 30 minutes.
+
+Take note of the question that you had to look up and try to solve it again without looking the next day and then one more time after a week. Make sure that you're extremely comfortable with it.
+
+**Where should I practice questions from**: The sources are the usual. I practiced using [Cracking The Coding Interview](http://www.crackingthecodinginterview.com/) and using [LeetCode](https://leetcode.com/)
+
+A great source that I found that someone created a curated list of 50 or so questions on leetcode and this list is by far the best out there. I have seen the same pattern of questions being repeated over and over in interviews just with different language. [Leetcode favorite list](https://leetcode.com/list/xoqag3yj/)
+
+**How many questions should I do?**: My suggestion would be to approach the **Breadth of problems rather than the depth**. What I mean by that is try multiple varitaions of different data structures and algorithms as opposed to going deep in just one topic (say, Arrays).
+
+### Do's and Don't During A Technical Interview
+
+* Do: **Dress well**. This is a weird one. Most engineers don't care how you dress and the dress code in silicon valley is casual as already but there are some (older) interviewers who make a decision based on how your appearence is.
+* Do: Start the interview by **greeting the interviewer** and trying to make a good first impression. Be confident.
+* Do: **Listen to the interviewer carefully**. A lot of times, the interviewers drop hints in their questions. (Ex: The list is **sorted** which means that you can  do the problem in a time better than O(nlogn))
+* Don't: Do not under any circumstances **assume anything** about the question on your own. If you have a doubt, clarify it!
+* Do: **Ask about edge cases!** spend atleast 5 minutes clarifying all the edge cases that come to your mind, (What happens if a list is empty?) ** We will discuss a list of edge cases below.
+* Do: Have a **Brute force solution**. Never assume that it's too simple and the interviewer doesn't care about the brute force. The interviewer wants to see that you are capable of coming up with different solutions and iterate on it to make it better!
+* Don't: **Keep quite during the interview**. Even if you need time to think let the interviewer know.
+* Do: **Communicate what you are thinking!** It is very important to keep talking during the interview. Let the interviewer know what your approach is and what you plan to do next. I cannot iterate how important this point is.
+* Do: Let the **interviewer know if you cannot solve the problem**. Usually, you know within 10-15 minutes if you can solve the problem. It's important to let the interviewer know so that he/she can give you a hint, or give you another question! [You might face some interviewers who want to see you struggle: screw them. A good interviewer wants to help you out so beleive that.]
+* Do: This is extremely important and cannot be stated enough. **Have questions for the interviewer at the end**. No Matter how you did, have good questions that you have researched about them or have great questions about the company! This really-really shows your interest.
+
+Some of these things might not be as highly ranked as solving the problem but we wan't to be able to control every aspect of the interview including impressions and leave nothing up to randomness.
+
+### Some Edge Cases For Questions
+
+**String Questions** - Empty String, If all characters are same, upper/lower case chars, ridiculuosly long strings, if spacing matters, odd/even length.
+
+**Number Questions** - If number is: 0, negative, infinite, floating point, huge values, smallest values, NaN.
+
+**Array Questions** - If list is empty, null. Can the array wrap around? Worry about [Time-amortization](http://anh.cs.luc.edu/363/notes/06A_Amortizing.html) -- Basically Dynamic Arrays take O(N) time to insert when array size has been reached and therefore capacity must be doubled.
+
+**Other DS** - Null, Head/Root does not exist.
+
+**General** - How big is the range of values? Are there Duplicates? How is input stored [If given dictionary of words is it a list of strings or a **Trie**]
+
+
+## Practicing for the interview
+
+Now, that you have a way to prepare for the behavioral and technical interviews, it's time to practice them. 
+
+Mock interviews are probably the most important aspect of an interview prep. Getting used to the nerves during the interview isn't easy. It isn't easy to just go up there and start talking. It takes practice because **INTERVIEWING IS A SKILL**.
+
+* [Pramp](www.pramp.com): Practice Mock Interviews with peers for free.
+* [interviewing.io](https://interviewing.io/): Practice Anonymous interviews.
+
+* [ME](gautamtata.blog@gmail.com): Email me (Buy me a coffee) and I'd be happy to help to chat about interviewing or even conducting mock interviews -- In person and Remote :)
+
+
+## Conlusion
+
+Preparing for Interviews is tough. I know, I failed dozens of interviews and prepared for 7 months day in and day out after I graduated college before I joined Salesforce. I realized that Interviewing is a skill that needs to be mastered.
+
+It's easy to feel nervous right now but trust me, it's a numbers game. Keep interviewing, keep practicing and block all other noise out. It doesn't matter what people say, what family says: You are good enough to work here. All it takes is a lot of practice and a bit of luck.
+
+I'd love to hear about any job updates or if I can help in any way so please reach out at [My Email](gautatata.blo@gmail.com).
+
+The last part of the series covers: Negotiation. See you there!
+
+## Other Resources
+
+* [Tech Interview Handbook](https://github.com/yangshun/tech-interview-handbook): Curated content to help you nail your next coding interview.
+
+* [Awesome Interview Questions](https://github.com/MaximAbramchuck/awesome-interview-questions/blob/master/README.md)
+
+* [30 minute guide to rocking your next coding interview](https://www.freecodecamp.org/news/coding-interviews-for-dummies-5e048933b82b/)
+
+*
