adding 4th blog test

--- a/content/posts/2020-03-10-get-a-job-3.md
+++ b/content/posts/2020-03-10-get-a-job-3.md
@@ -115,7 +115,7 @@ A great source that I found that someone created a curated list of 50 or so ques
 * Don't: **Keep quite during the interview**. Even if you need time to think let the interviewer know.
 * Do: **Communicate what you are thinking!** It is very important to keep talking during the interview. Let the interviewer know what your approach is and what you plan to do next. I cannot iterate how important this point is.
 * Do: Let the **interviewer know if you cannot solve the problem**. Usually, you know within 10-15 minutes if you can solve the problem. It's important to let the interviewer know so that he/she can give you a hint, or give you another question! [You might face some interviewers who want to see you struggle: screw them. A good interviewer wants to help you out so beleive that.]
-* Do: This is extremely important and cannot be stated enough. **Have questions for the interviewer at the end**. No Matter how you did, have good questions that you have researched about them or have great questions about the company! This really-really shows your interest.
+* Do: This is extremely important and cannot be stated enough. **Have questions for the interviewer at the end**. No Matter how you did, have good questions that you have researched about them or have great questions about the company! This really-really shows your interest.[Questions to ask interviewers](https://github.com/yangshun/tech-interview-handbook/blob/master/contents/questions-to-ask.md)
 
 Some of these things might not be as highly ranked as solving the problem but we wan't to be able to control every aspect of the interview including impressions and leave nothing up to randomness.
 
@@ -162,4 +162,8 @@ The last part of the series covers: Negotiation. See you there!
 
 * [30 minute guide to rocking your next coding interview](https://www.freecodecamp.org/news/coding-interviews-for-dummies-5e048933b82b/)
 
-*
+* [Behavioral Interview for SWE](https://www.byte-by-byte.com/behavioral-interviews/)
+
+* [Guide to behavioral interviews](https://www.glassdoor.com/blog/guide/how-to-prepare-for-a-behavioral-interview/)
+
+* [Questions to ask interviewers](https://github.com/yangshun/tech-interview-handbook/blob/master/contents/questions-to-ask.md)
