adding 4th blog test

--- a/content/posts/2020-03-10-get-a-job-3.md
+++ b/content/posts/2020-03-10-get-a-job-3.md
@@ -67,7 +67,27 @@ Assume that to cover preperation end to end you will need a full month of dedica
 
 You've spent hours crafting your resume, applying to jobs and practicing coding. Now the time is to put your skills to test. In this section, we will discuss how to crack the behavioral and coding interview and what type of questions you can expect.
 
-Later, we we will talk about what to do and what not to do during eacg type of interview followed by tools that we can use to help us succeed.
+Later, we we will talk about what to do and what not to do during each type of interview followed by tools that we can use to help us succeed.
+
+## Cracking The Behavioral Interview
+
+Succeeding in an interiew involves more than just technical skills. Behavioral interviews are very important and are **directly proportial** to how much experience you have.
+Senior engineers are expected to lead, strategize and mentor with other engineers and therefore the bar of people skills is much higher.
+
+Hiring a talented engineer that cannot work with others can ultimately be a net deficit for companies. Companies don’t want to hire [brilliant jerks](http://www.brendangregg.com/blog/2017-11-13/brilliant-jerks.html). The company is better off not hiring a very talented engineer who refuses to work with others or causes an entire team to be unproductive. Companies want to hire the right person that will work well with the existing employees and help the team and company achieve greater heights, and behavioral interviews are one way of determining if someone will be good to work with from a non-technical standpoint.
+
+## Most companies evaluate behavioral skills
+
+Companies value behavioral skills and do evaluate candidates on them. At the time of writing, Facebook has one round (out of four) dedicated to behavioral interviews. Airbnb has TWO rounds (out of six) dedicated to behavioral interviews/company fit. Lyft has one round (out of five) dedicated to past experience and situational questions by a hiring manager.
+
+## What Facebook looks for in behavioral interviews
+
+- Discuss anything written on your resume, and be able to go in-depth
+- Provide specific examples about what you did and the resulting impact
+- Critique yourself and share what you learned from a past situation
+- Talk about what you like about your current role and/or being a developer
+- Discuss what and why changes you would like to make
+
 
 ## Cracking The Technical Interview
 
