--- a/content/posts/2020-03-09-get-a-job-2.md
+++ b/content/posts/2020-03-09-get-a-job-2.md
@@ -20,6 +20,9 @@ discussLinkTwitter: https://twitter.com/victorczhou/status/1154055678518054912?s
 discussLinkHN: https://news.ycombinator.com/item?id=20524543
 ---
 
+
+![work from home](https://github.com/gautamtata/blog/blob/master/static/media/tech2.PNG?raw=true)
+
 ## Introduction
 This is a follow-up article that demonstrates the **RIGHT** way to apply for jobs.
 
