--- a/content/posts/2020-03-08-get-a-job-1.md
+++ b/content/posts/2020-03-08-get-a-job-1.md
@@ -22,7 +22,7 @@ discussLinkHN: https://news.ycombinator.com/item?id=19320217
 discussLinkReddit: https://www.reddit.com/r/Python/comments/axnvut/implementing_a_neural_network_from_scratch_in/
 ---
 
-![work from home](https://github.com/gautamtata/blog/blob/master/static/media/tech1.jpeg?raw=true)
+![work from home](https://github.com/gautamtata/blog/blob/master/static/media/tech3.png?raw=true)
 
 Let's get something straight. This article is for people who cannot **drop-names** in their resume. (Because if you did, you wouldn't need to read this article.) 
 This blog is for someone like me, someone who went to a no-name school and never worked in a big-N before.
