--- a/content/posts/2020-03-09-get-a-job-2.md
+++ b/content/posts/2020-03-09-get-a-job-2.md
@@ -21,7 +21,7 @@ discussLinkHN: https://news.ycombinator.com/item?id=20524543
 ---
 
 
-![work from home](https://github.com/gautamtata/blog/blob/master/static/media/tech2.PNG?raw=true)
+![work from home](https://github.com/gautamtata/blog/blob/master/static/media/tech1.jpeg?raw=true)
 
 ## Introduction
 This is a follow-up article that demonstrates the **RIGHT** way to apply for jobs.
