--- a/content/posts/2019-05-29-get-a-job-4.md
+++ b/content/posts/2019-05-29-get-a-job-4.md
@@ -20,7 +20,7 @@ next: "/blog/get-a-job-2/"
 discussLinkTwitter: https://twitter.com/victorczhou/status/1133752584383205377
 discussLinkHN: https://news.ycombinator.com/item?id=20064900
 ---
-![Negotiation](./media-link/nego.jpg)
+![Negotiation](https://github.com/gautamtata/blog/blob/master/static/media/tech4.png?raw=true)
 
 Compensation is a huge factor when it comes to deciding between job offers. This section gives you a breakdown of the common components of compensation in the tech industry.
 
