--- a/content/posts/2020-03-10-get-a-job-3.md
+++ b/content/posts/2020-03-10-get-a-job-3.md
@@ -18,7 +18,7 @@ prev: "/blog/get-a-job-2/"
 next: "/blog/get-a-job-4/"
 ---
 
-![](./media-link/interview.jpeg)
+![Interview](https://github.com/gautamtata/blog/blob/master/static/media/tech5.jpg?raw=true)
 
 # Introduction and Background
 
